[tool.poetry]
name = "leetcodedowloaddemon"
version = "0.1.0"
description = ""
authors = ["nadezhdaSwan <nalebedevawork@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.25.0"
lxml = "^5.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
